fix: align top up and trade button

--- a/packages/cfd/src/sass/cfd-dashboard.scss
+++ b/packages/cfd/src/sass/cfd-dashboard.scss
@@ -1040,6 +1040,10 @@
             &:not(:last-child) {
                 margin-right: 0.6rem;
             }
+
+            @include mobile {
+                min-width: 13rem;
+            }
         }
     }
 
